syntax = "proto3";
package ativoobjetoproto;
option java_package = "proto.ativo.ativoobjetoproto";
option java_multiple_files = true;

message AtivoObjeto {
  string sigla_ativo = 1;
  string nome_ativo = 2;
  string descricao_cnpj_ativo = 3;
  int32 tipo_ativo = 4;  // 1 - ação , 2 - fundo imobiliario
}


message CadastraAtivoObjetoRequest {
  AtivoObjeto ativo = 1;
}

message CadastraAtivoObjetoResponse {
  string response_code = 1;
  string response_message = 2;
}

service CadastraAtivoObjetoService {
  //unary
  rpc CadastraAtivoObjeto(CadastraAtivoObjetoRequest) returns (CadastraAtivoObjetoResponse) {};
}

message ConsultaAtivoObjetoRequest {
  string sigla_ativo = 1;
}

message ConsultaAtivoObjetoResponse {
  string response_code = 1;
  string response_message = 2;
  AtivoObjeto ativo = 3;
}

service ConsultaAtivoObjetoService {
  //unary
  rpc ConsultaAtivoObjeto(ConsultaAtivoObjetoRequest) returns (ConsultaAtivoObjetoResponse) {};
}


